--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -16,15 +16,15 @@ body {
 .projcard-container {
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
+  /*width: 1000px;*/
 }
 .projcard {
   position: relative;
-  width: 100%;
+  width: 75%;
   height: 500px;
-  margin-bottom: 40px;
+  margin: auto;
   border-radius: 10px;
-  background-color: #fff;
+   background-color: #fff;
   border: 2px solid #ddd;
   font-size: 18px;
   overflow: hidden;
@@ -157,10 +157,7 @@ body {
 .projcard-customcolor:nth-child(2n)::before { background-image: linear-gradient(-250deg, var(--projcard-color), transparent 50%); }
 .projcard-description {
   z-index: 10;
-  font-size: 15px;
-  color: #424242;
-  height: 400px;
-  font-size: medium;
+  
   overflow: hidden;
   text-overflow: ellipsis;
 }
