--- a/public/css3/style_card.css
+++ b/public/css3/style_card.css
@@ -11,7 +11,7 @@
   
   
   body {
-    background-color: #000;
+    background-color: var(--color1);
 
   }
   .ag-courses_box {
@@ -39,7 +39,7 @@
   .ag-courses-item_link {
     display: block;
     padding: 30px 20px;
-    background-color: #121212;
+    background-color: var(--color1);
     text-decoration: none !important;
     overflow: hidden;
   
@@ -48,7 +48,7 @@
   .ag-courses-item_link:hover,
   .ag-courses-item_link:hover .ag-courses-item_date {
     text-decoration: none;
-    color: #FFF;
+    color: var(--color2);
   }
   .ag-courses-item_link:hover .ag-courses-item_bg {
     -webkit-transform: scale(10);
@@ -64,21 +64,21 @@
     font-weight: bold;
     font-size: 25px;
     padding: 20px 0 0 ;
-    color: #FFF;
+    color: var(--color2);
   
     z-index: 2;
     position: relative;
   }
   .ag-courses-item_date-box {
     font-size: 18px;
-    color: #FFF;
+    color: var(--color2);
   
     z-index: 2;
     position: relative;
   }
   .ag-courses-item_date {
     font-weight: bold;
-    color: #f9b234;
+    color: var(--color3);
   
     -webkit-transition: color .5s ease;
     -o-transition: color .5s ease;
@@ -87,7 +87,7 @@
   .ag-courses-item_bg {
     height: 128px;
     width: 128px;
-    background-color: #f9b234;
+    background-color: var(--color3);
   
     z-index: 1;
     position: absolute;
@@ -101,19 +101,19 @@
     transition: all .5s ease;
   }
   .ag-courses_item:nth-child(2n) .ag-courses-item_bg {
-    background-color: #3ecd5e;
+    background-color: var(--color3);
   }
   .ag-courses_item:nth-child(3n) .ag-courses-item_bg {
-    background-color: #e44002;
+    background-color: var(--color3);
   }
   .ag-courses_item:nth-child(4n) .ag-courses-item_bg {
-    background-color: #952aff;
+    background-color: var(--color3);
   }
   .ag-courses_item:nth-child(5n) .ag-courses-item_bg {
-    background-color: #cd3e94;
+    background-color: var(--color3);
   }
   .ag-courses_item:nth-child(6n) .ag-courses-item_bg {
-    background-color: #4c49ea;
+    background-color: var(--color3);
   }
   
   
@@ -165,8 +165,8 @@
 
 body {
   font-family: 'DM Sans', sans-serif;
-  background-color: #1D1E22;
-  color: white;
+  background-color: var(--color1);
+  color: var(--color2);
   padding: 1rem;
   text-align: center;
 }
