--- a/public/css3/style_nav.css
+++ b/public/css3/style_nav.css
@@ -10,7 +10,7 @@ nav {
   z-index: 99;
   width: 100%;
 
-  background: #242526;
+  background: var(--color1);
 }
 nav .wrapper {
   position: relative;
@@ -24,7 +24,7 @@ nav .wrapper {
   justify-content: space-between;
 }
 .wrapper .logo a {
-  color: #f2f2f2;
+  color: var(--color2);
   font-size: 50px;
   font-weight: 600;
   text-decoration: none;
@@ -36,7 +36,7 @@ nav .wrapper {
   list-style: none;
 }
 .nav-links li a {
-  color: #f2f2f2;
+  color: var(--color2);
   text-decoration: none;
   font-size: 21px;
   font-weight: 500;
@@ -46,14 +46,14 @@ nav .wrapper {
 }
 
 .nav-links li a:hover {
-  background: #3a3b3c;
+  background: var(--color1);
 }
 .nav-links .mobile-item {
   display: none;
 }
 .nav-links .drop-menu {
   position: absolute;
-  background: #242526;
+  background: var(--color1);
   width: 250px;
   line-height: 45px;
   top: 85px;
@@ -102,7 +102,7 @@ nav .wrapper {
   object-fit: cover;
 }
 .content .row header {
-  color: #f2f2f2;
+  color: var(--color2);
   font-size: 20px;
   font-weight: 500;
 }
@@ -116,15 +116,15 @@ nav .wrapper {
 .row .mega-links li a {
   padding: 0px;
   padding: 0 20px;
-  color: #d9d9d9;
+  color: var(--color2);
   font-size: 17px;
   display: block;
 }
 .row .mega-links li a:hover {
-  color: #f2f2f2;
+  color: var(--color2);
 }
 .wrapper .btn {
-  color: #fff;
+  color: var(--color2);
   font-size: 20px;
   cursor: pointer;
   display: none;
@@ -159,10 +159,10 @@ nav .wrapper {
     width: 10px;
   }
   ::-webkit-scrollbar-track {
-    background: #242526;
+    background: var(--color1);
   }
   ::-webkit-scrollbar-thumb {
-    background: #3a3b3c;
+    background: var(--color1);
   }
   #menu-btn:checked ~ .nav-links {
     left: 0%;
@@ -202,7 +202,7 @@ nav .wrapper {
   }
   .nav-links .mobile-item {
     display: block;
-    color: #f2f2f2;
+    color: var(--color2);
     font-size: 20px;
     font-weight: 500;
     padding-left: 20px;
@@ -211,7 +211,7 @@ nav .wrapper {
     transition: all 0.3s ease;
   }
   .nav-links .mobile-item:hover {
-    background: #3a3b3c;
+    background: var(--color1);
   }
   .drop-menu li {
     margin: 0;
