--- a/public/css3/style_background.css
+++ b/public/css3/style_background.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(-45deg, var(--color2), var(--color2), var(--color2), var(--color2));
+	background: linear-gradient(-45deg, var(--color4), var(--color4));
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
