--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -1,14 +1,4 @@
 /* Demo Code: */
-body {
-  font-family: 'Open Sans', arial, sans-serif;
-  color: #333;
-  font-size: 25px;
-  text-align: justify;
-}
-h1{
-  text-align: center;
-  padding: 30px;
-}
 .projcard-container {
   opacity: 90%;
   margin: 50px 0;
@@ -27,11 +17,11 @@ h1{
 .projcard {
   position: relative;
   width: 75%;
-  height: 700px;
+  height: 100vh;
   margin: auto;
   border-radius: 10px;
-   background-color: #fff;
-  border: 2px solid #ddd;
+   background-color: var(--color-light);
+  border: 2px solid var(--color-light);
   font-size: 18px;
   overflow: hidden;
   cursor: pointer;
@@ -64,7 +54,7 @@ h1{
 }
 .projcard-img {
   position: absolute;
-  height: 700px;
+  height: 100vh;
   object-fit: cover;
   width: 400px;
   top: 0;
@@ -99,12 +89,12 @@ h1{
   position: absolute;
   display: block;
   background: #ff0000bb;
-  background: #fff;
+  background: var(--color-light);
   top: -20%;
   left: -55px;
-  height: 140%;
+  height: 150%;
   width: 60px;
-  transform: rotate(5deg);
+  transform: rotate(4deg);
 }
 .projcard:nth-child(2n) .projcard-textbox::before {
   display: none;
@@ -137,35 +127,12 @@ h1{
   background-color: #424242;
   transition: width 0.2s ease;
 }
-.projcard-blue .projcard-bar { background-color: #0088FF; }
-.projcard-blue::before { background-image: linear-gradient(-70deg, #0088FF, transparent 50%); }
-.projcard-blue:nth-child(2n)::before { background-image: linear-gradient(-250deg, #0088FF, transparent 50%); }
-.projcard-red .projcard-bar { background-color: #D62F1F; }
-.projcard-red::before { background-image: linear-gradient(-70deg, #D62F1F, transparent 50%); }
-.projcard-red:nth-child(2n)::before { background-image: linear-gradient(-250deg, #D62F1F, transparent 50%); }
-.projcard-green .projcard-bar { background-color: #40BD00; }
-.projcard-green::before { background-image: linear-gradient(-70deg, #40BD00, transparent 50%); }
-.projcard-green:nth-child(2n)::before { background-image: linear-gradient(-250deg, #40BD00, transparent 50%); }
-.projcard-yellow .projcard-bar { background-color: #F5AF41; }
-.projcard-yellow::before { background-image: linear-gradient(-70deg, #F5AF41, transparent 50%); }
-.projcard-yellow:nth-child(2n)::before { background-image: linear-gradient(-250deg, #F5AF41, transparent 50%); }
-.projcard-orange .projcard-bar { background-color: #FF5722; }
-.projcard-orange::before { background-image: linear-gradient(-70deg, #FF5722, transparent 50%); }
-.projcard-orange:nth-child(2n)::before { background-image: linear-gradient(-250deg, #FF5722, transparent 50%); }
-.projcard-brown .projcard-bar { background-color: #C49863; }
-.projcard-brown::before { background-image: linear-gradient(-70deg, #C49863, transparent 50%); }
-.projcard-brown:nth-child(2n)::before { background-image: linear-gradient(-250deg, #C49863, transparent 50%); }
-.projcard-grey .projcard-bar { background-color: #424242; }
-.projcard-grey::before { background-image: linear-gradient(-70deg, #424242, transparent 50%); }
-.projcard-grey:nth-child(2n)::before { background-image: linear-gradient(-250deg, #424242, transparent 50%); }
-.projcard-customcolor .projcard-bar { background-color: var(--projcard-color); }
-.projcard-customcolor::before { background-image: linear-gradient(-70deg, var(--projcard-color), transparent 50%); }
-.projcard-customcolor:nth-child(2n)::before { background-image: linear-gradient(-250deg, var(--projcard-color), transparent 50%); }
+
 .projcard-description {
   z-index: 10;
-  
-  overflow: hidden;
+  overflow: scroll;
   text-overflow: ellipsis;
+  text-align: justify;
 }
 .projcard-tagbox {
   position: absolute;
@@ -177,8 +144,8 @@ h1{
 }
 .projcard-tag {
   display: inline-block;
-  background: #E0E0E0;
-  color: #777;
+  background: var(--color-dark-elem);
+  color: var(--color-bg);
   border-radius: 3px 0 0 3px;
   line-height: 26px;
   padding: 0 10px 0 23px;
@@ -209,3 +176,30 @@ h1{
   top: 0;
 }
 
+.readmore {
+background-color: var(--color-dark-elem);
+color: var(--color-bg);
+padding: 1rem 2rem 1rem 2rem;
+border-radius: 5rem;
+
+}
+.about {
+  display: inline-block;
+  background-color: var(--color-bg);
+  width: 100%;
+  margin: auto;
+  &.title{
+    text-align: left;
+    font-size: larger;
+    font-family: var(--font-secondary-title);
+    font-weight: bold;
+    padding: 1rem 2rem 0rem 2rem;
+    text-shadow: none;
+
+  }
+  &.intro{
+    text-align: justify;
+    padding: 2rem;
+  }
+
+}
