--- a/public/css/style_nav.css
+++ b/public/css/style_nav.css
@@ -1,234 +1,307 @@
-@import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
 
-*{
-  box-sizing:content-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+nav {
+  /*position: fixed;*/
+  z-index: 99;
+  max-width: 75rem;
+  background: var(--color-dark-txt);
+  margin: auto;
+  border-radius: 5rem;
+  font-family: "Aesthetic Romance", sans-serif;
+  font-size: x-large;
+  
+}
+nav .wrapper {
+  position: relative;
+  max-width: 80vw;
+  padding: 0px 30px;
+  height: 100px;
+  line-height: 70px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.wrapper .logo a {
+  color: var(--color-light);
+  font-size: 50px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.wrapper .nav-links {
+  display: inline-flex;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links li a {
+  color: var(--color-light);
+  text-decoration: none;
+  font-size: x-large;
+  font-weight: 500;
+  padding: 9px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
-:root{
-  --accent-color:#000000;
-  --gradient-color:#FBFBFB;
+.nav-links li a:hover {
+  background: var(--color-dark-elem);
+}
+.nav-links .mobile-item {
+  display: none;
+}
+.nav-links .drop-menu {
+  position: absolute;
+  background: var(--color-bg);
+  width: 250px;
+  line-height: 45px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.nav-links li:hover .drop-menu,
+.nav-links li:hover .mega-box {
+  transition: all 0.3s ease;
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+}
+.drop-menu li a {
+  width: 100%;
+  display: block;
+  padding: 0 0 0 15px;
+  font-weight: medium;
+  border-radius: 0px;
+  color: var(--color-dark-txt);
+  background-color: var(--color-light);
+}
+.mega-box {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 0 30px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+}
+.mega-box .content {
+  background: #242526;
+  padding: 25px 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.mega-box .content .row {
+  width: calc(25% - 30px);
+  line-height: 45px;
+}
+.content .row img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.content .row header {
+  color: var(--color-light);
+  font-size: 20px;
+  font-weight: 500;
+}
+.content .row .mega-links {
+  margin-left: -40px;
+  border-left: 1px solid rgba(255, 255, 255, 0.09);
+}
+.row .mega-links li {
+  padding: 0 20px;
+}
+.row .mega-links li a {
+  padding: 0px;
+  padding: 0 20px;
+  color: var(--color-light);
+  font-size: 17px;
+  display: block;
+}
+.row .mega-links li a:hover {
+  color: var(--color-light);
+}
+.wrapper .btn {
+  color: var(--color-light);
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+.wrapper .btn.close-btn {
+  position: absolute;
+  right: 30px;
+  top: 10px;
 }
 
-a:focus{
-  outline:none;
-  position:relative;
-  &:after{
-    width:50px;
-  }
-}
-
-a:after{
-  content:"";
-  background:#FBFBFB;
-  position:absolute;
-  bottom:5px;
-  left:15px;
-  height:3px;
-  width:0;
-  transition:.5s;
-  transition-delay:.2s;
-}
-
-body{
-  /*background:#1f1d1d;*/
-  font-family:"Varela Round",Nunito,Montserrat,sans-serif;
-  margin:0;padding:0;
-}
-
-.menu{
-
-  margin:15px;
-  > ol{
-    list-style:none;
-    margin:15px * 2 0;
-    padding:0;
-    
-    > li{
-      background:darken(#FBFBFB,75%);
-      border-left:5px solid var(--gradient-color);
-      margin-bottom:1px;
-      position:relative;
-      transition:.5s;
-      &:nth-child(1){
-        --accent-color:#FDA085;
-        --gradient-color:#F6D365;
-      }
-      &:nth-child(2){
-        --accent-color:#BFF098;
-        --gradient-color:#6FD6FF;
-      }
-      &:nth-child(3){
-        --accent-color:#EA8D8D;
-        --gradient-color:#A890FE;
-      }
-      &:nth-child(4){
-        --accent-color:#D8B5FF;
-        --gradient-color:#1EAE98;
-      }
-      &:nth-child(5){
-        --accent-color:#C6EA8D;
-        --gradient-color:#FE90AF;
-      }
-      a{
-        color:#FBFBFB;
-        display:block;
-        padding:15px;
-        position:relative;
-        text-decoration:none;
-        z-index:1;
-        &:not(:last-child){
-          &:before{
-            content:"\f078";
-            font-family:fontAwesome;
-            font-size:.75em;
-            line-height:50px;
-            position:absolute;
-            right:25px;
-            top:0;
-            bottom:0;
-            margin:auto;
-            transition:.5s;
-          }
-        }
-      }
-      &:focus,&:focus-within,&:hover{
-        z-index:100;
-        
-        &:after{
-          background:linear-gradient(to left, var(--accent-color), var(--gradient-color));
-          max-width:1500px;
-        }
-      }
-      &:focus,&:focus-within{
-        .sub-menu{
-          max-height:500px;
-        }
-        a:before{
-          transform:rotate(-180deg);
-        }
-      }
-      &:after{
-        background:darken(#FBFBFB,75%);
-        content:"";
-        position:absolute;
-        left:0;
-        right:0;
-        top:0;
-        bottom:0;
-        transition:.5s;
-        max-width:0;
-        overflow:hidden;
-      }
-    }
-    .sub-menu{
-      border-left:1px solid #FBFBFB;
-      margin-left:15px*1.5;
-      list-style:none;
-      max-height:0px;
-      overflow:hidden;
-      padding-left:15px/2;
-      position:relative;
-      transition:.5s;
-      z-index:1;
-      li{
-        font-size:.9em;
-        &:hover,a:focus{
-          background:fade(darken(#FBFBFB,75%),30%);
-        }
-        a:after{
-          bottom:5px;
-          height:1px;
-        }
-        a:hover,a:focus{
-          &:after{
-            width:15px;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (min-width:600px){  
-  a:focus,a:hover{
-    position:relative;
-    &:after{
-      width:50px;
-    }
+@media screen and (max-width: 970px) {
+  .logoDominika{
+    max-height: 3rem;
   }
   
-  a:after{
-    left:0;
-    right:0;
-    margin:auto;
+  .logo-and-name{
+    display: flex;
+    flex-direction: row;
   }
 
-  .menu{
-    margin:0;
-    margin-top:15px;
+  .wrapper .btn {
+    display: block;
+    color: var(--color-light);
   }
-  .menu > ol{
-    display:block;
-    max-width:none;
-    text-align:center;
-    > li{
-      border-top:5px solid var(--accent-color);
-      border-left:0;
-      display:inline-block;
-      margin-left:-5px;
-      vertical-align:top;
-      width:300px;
-      &:hover,&:focus,&:focus-within{
-        &:after{
-          background:linear-gradient(to bottom, var(--accent-color), var(--gradient-color));
-          border-radius:7px;
-          top:-15px;
-          bottom:-15px;
-          left:-15px;
-          right:-15px;
-        }
-        
-        .sub-menu{
-          max-height:750px;
-        }
-      }
-      
-      a:not(:last-child){
-        &:before{
-          right:12.5px;
-        }
-      }
-      
-      &:hover{
-        a:before{
-          transform:rotate(-180deg);
-        }
-      }
-    }
-    .sub-menu{
-      border-left:0;
-      margin:15px -15px -15px;
-      padding-left:0;
-    }
+  
+  .wrapper .nav-links {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    max-width: 350px;
+    top: 0;
+    left: -100%;
+    background: #242526;
+    display: block;
+    padding: 50px 10px;
+    line-height: 50px;
+    overflow-y: auto;
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
+    transition: all 0.3s ease;
+  }
+  /* custom scroll bar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: var(--color-bg);
+  }
+  ::-webkit-scrollbar-thumb {
+    background: var(--color-bg);
+  }
+  #menu-btn:checked ~ .nav-links {
+    left: 0%;
+  }
+  #menu-btn:checked ~ .btn.menu-btn {
+    display: none;
+  }
+  #close-btn:checked ~ .btn.menu-btn {
+    display: block;
+  }
+  .nav-links li {
+    margin: 15px 10px;
+  }
+  .nav-links li a {
+    padding: 0 20px;
+    display: block;
+    font-size: 20px;
+  }
+  .nav-links .drop-menu {
+    position: static;
+    opacity: 1;
+    top: 65px;
+    visibility: visible;
+    padding-left: 20px;
+    width: 100%;
+    max-height: 0px;
+    overflow: hidden;
+    box-shadow: none;
+    transition: all 0.3s ease;
+  }
+  #showDrop:checked ~ .drop-menu,
+  #showMega:checked ~ .mega-box {
+    max-height: 100%;
+  }
+  .nav-links .desktop-item {
+    display: none;
+  }
+  .nav-links .mobile-item {
+    display: block;
+    color: var(--color-light);
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+  }
+  .nav-links .mobile-item:hover {
+    background: var(--color-bg);
+  }
+  .drop-menu li {
+    margin: 0;
+  }
+  .drop-menu li a {
+    border-radius: 5px;
+    font-size: 18px;
+  }
+  .mega-box {
+    position: static;
+    top: 65px;
+    opacity: 1;
+    visibility: visible;
+    padding: 0 20px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+  }
+  .mega-box .content {
+    box-shadow: none;
+    flex-direction: column;
+    padding: 20px 20px 0 20px;
+  }
+  .mega-box .content .row {
+    width: 100%;
+    margin-bottom: 15px;
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+  }
+  .mega-box .content .row:nth-child(1),
+  .mega-box .content .row:nth-child(2) {
+    border-top: 0px;
+  }
+  .content .row .mega-links {
+    border-left: 0px;
+    padding-left: 15px;
+  }
+  .row .mega-links li {
+    margin: 0;
+  }
+  .content .row header {
+    font-size: 19px;
+  }
+  .wrapper .logo a {
+    color: var(--color-light);
+    font-size: medium;
+    font-weight: 600;
+    text-decoration: none;
   }
 }
-
-
-@media (min-width:775px){
-  .menu > ol{
-    > li{
-      width:300px; 
-      
-      a:not(:last-child){
-        &:before{
-          right:25px;
-        }
-      }
-    }
-  }
+nav input {
+  display: none;
 }
-.black{
-  background-color: #000000;
-  border-radius:7px;
+
+.body-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  padding: 0 30px;
+}
+.body-text div {
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.logoDominika{
+  height: 5rem;
+}
+
+.logo-and-name{
+  display: flex;
+  flex-direction: row;
 }
