--- a/public/css/style_grid.css
+++ b/public/css/style_grid.css
@@ -44,6 +44,7 @@
     width: 90vw;
     background-color: var(--color-light);
     border-radius: 2rem;
+    z-index: 1;
   }
   .circle {
     position: absolute;
