--- a/public/css/style_nav.css
+++ b/public/css/style_nav.css
@@ -1,147 +1,3 @@
-
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
-}
-nav {
-  /*position: fixed;*/
-  z-index: 99;
-  max-width: 75rem;
-  background: var(--color-dark-txt);
-  margin: auto;
-  border-radius: 5rem;
-  font-family: "Aesthetic Romance", sans-serif;
-  font-size: x-large;
-  
-}
-nav .wrapper {
-  position: relative;
-  max-width: 80vw;
-  padding: 0px 30px;
-  height: 100px;
-  line-height: 70px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.wrapper .logo a {
-  color: var(--color-light);
-  font-size: 50px;
-  font-weight: 600;
-  text-decoration: none;
-}
-.wrapper .nav-links {
-  display: inline-flex;
-}
-.nav-links li {
-  list-style: none;
-}
-.nav-links li a {
-  color: var(--color-light);
-  text-decoration: none;
-  font-size: x-large;
-  font-weight: 500;
-  padding: 9px 15px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
-
-.nav-links li a:hover {
-  background: var(--color-dark-elem);
-}
-.nav-links .mobile-item {
-  display: none;
-}
-.nav-links .drop-menu {
-  position: absolute;
-  background: var(--color-bg);
-  width: 250px;
-  line-height: 45px;
-  top: 85px;
-  opacity: 0;
-  visibility: hidden;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-}
-.nav-links li:hover .drop-menu,
-.nav-links li:hover .mega-box {
-  transition: all 0.3s ease;
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-.drop-menu li a {
-  width: 100%;
-  display: block;
-  padding: 0 0 0 15px;
-  font-weight: medium;
-  border-radius: 0px;
-  color: var(--color-dark-txt);
-  background-color: var(--color-light);
-}
-.mega-box {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  padding: 0 30px;
-  top: 85px;
-  opacity: 0;
-  visibility: hidden;
-}
-.mega-box .content {
-  background: #242526;
-  padding: 25px 20px;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-}
-.mega-box .content .row {
-  width: calc(25% - 30px);
-  line-height: 45px;
-}
-.content .row img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.content .row header {
-  color: var(--color-light);
-  font-size: 20px;
-  font-weight: 500;
-}
-.content .row .mega-links {
-  margin-left: -40px;
-  border-left: 1px solid rgba(255, 255, 255, 0.09);
-}
-.row .mega-links li {
-  padding: 0 20px;
-}
-.row .mega-links li a {
-  padding: 0px;
-  padding: 0 20px;
-  color: var(--color-light);
-  font-size: 17px;
-  display: block;
-}
-.row .mega-links li a:hover {
-  color: var(--color-light);
-}
-.wrapper .btn {
-  color: var(--color-light);
-  font-size: 20px;
-  cursor: pointer;
-  display: none;
-}
-.wrapper .btn.close-btn {
-  position: absolute;
-  right: 30px;
-  top: 10px;
-}
-
 @media screen and (max-width: 970px) {
   .logoDominika{
     max-height: 3rem;
@@ -155,6 +11,13 @@ nav .wrapper {
   .wrapper .btn {
     display: block;
     color: var(--color-light);
+  }
+
+.name a {
+    color: var(--color-light);
+    font-size: larger;
+    font-weight: 600;
+    text-decoration: none;
   }
   
   .wrapper .nav-links {
@@ -279,6 +142,146 @@ nav .wrapper {
     text-decoration: none;
   }
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+nav {
+  /*position: fixed;*/
+  z-index: 90;
+  max-width: 75rem;
+  background: var(--color-dark-txt);
+  margin: auto;
+  border-radius: 5rem;
+  font-family: "Aesthetic Romance", sans-serif;
+  font-size: x-large;
+  
+}
+nav .wrapper {
+  position: relative;
+  padding: 0px 30px;
+  line-height: 70px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.name a {
+  color: var(--color-light);
+  font-weight: 600;
+  text-decoration: none;
+}
+.wrapper .nav-links {
+  display: inline-flex;
+}
+.nav-links li {
+  list-style: none;
+  z-index: 90;
+}
+.nav-links li a {
+  color: var(--color-light);
+  text-decoration: none;
+  font-size: x-large;
+  font-weight: 500;
+  padding: 9px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.nav-links li a:hover {
+  background: var(--color-dark-elem);
+  color: var(--color-light);
+}
+.nav-links .mobile-item {
+  display: none;
+}
+.nav-links .drop-menu {
+  position: absolute;
+  background: var(--color-bg);
+  width: 250px;
+  line-height: 45px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.nav-links li:hover .drop-menu,
+.nav-links li:hover .mega-box {
+  transition: all 0.3s ease;
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+}
+.drop-menu li a {
+  width: 100%;
+  display: block;
+  padding: 0 0 0 15px;
+  font-weight: medium;
+  border-radius: 0px;
+  color: var(--color-dark-txt);
+  background-color: var(--color-light);
+}
+.mega-box {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 0 30px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+}
+.mega-box .content {
+  background: #242526;
+  padding: 25px 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.mega-box .content .row {
+  width: calc(25% - 30px);
+  line-height: 45px;
+}
+.content .row img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.content .row header {
+  color: var(--color-light);
+  font-weight: 500;
+}
+.content .row .mega-links {
+  margin-left: -40px;
+  border-left: 1px solid rgba(255, 255, 255, 0.09);
+}
+.row .mega-links li {
+  padding: 0 20px;
+}
+.row .mega-links li a {
+  padding: 0px;
+  padding: 0 20px;
+  color: var(--color-light);
+  display: block;
+}
+.row .mega-links li a:hover {
+  color: var(--color-light);
+}
+.wrapper .btn {
+  color: var(--color-light);
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+.wrapper .btn.close-btn {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+} 
 nav input {
   display: none;
 }
@@ -304,4 +307,11 @@ nav input {
 .logo-and-name{
   display: flex;
   flex-direction: row;
+}
+
+@media screen and (min-width: 970px) {
+
+.name a {
+  font-size: xx-large ;
+}
 }
