--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -1,3 +1,13 @@
+@keyframes appear {
+  from {
+    opacity : 0;
+    scale: 0.5  
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  } 
+}
 /* Demo Code: */
 .projcard-container {
   opacity: 90%;
@@ -177,39 +187,28 @@
 }
 
 .readmore {
+position: relative;
 background-color: var(--color-dark-elem);
 color: var(--color-bg);
 padding: 1rem 2rem 1rem 2rem;
 border-radius: 5rem;
+z-index: 2;
 
 }
-/*@keyframes reveal {
-  from {
-    transform: scale(0);
-    opacity: 0;
-  }
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
+.mindmap--container {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
 }
-animation: reveal linear;
-animation-timeline: view();
-animation-range-start: cover 0%;
-animation-range-end: contain 50%;*/
 .about {
 
   width: 90vw;
-  margin: 2rem auto;
+  margin: 1rem auto auto auto;
   border-radius: 2rem;
   background-color: var(--color-light);
 
-&.textandpicture{
-  display: flex;
-  flex-direction: row;
-}
-  &.title{
-    text-align: left;
+  & .title{
+    text-align: center;
     font-size: larger;
     font-family: var(--font-secondary-title);
     font-weight: bold;
@@ -217,22 +216,48 @@ animation-range-end: contain 50%;*/
     text-shadow: none;
 
   }
+
   &.photo {
-    width: 20%;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+    width: 100%;
+    padding-bottom: 2rem;
   }
+
   &.intro{
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
     text-align: justify;
     padding: 2rem;
   }
+}
 article {
   width: 90vw;
   margin: 2rem auto;
   border-radius: 2rem;
   background-color: var(--color-light);
-  &--picture{
-    height: 100%;
-    
-    object-git: cover;
-    
-  
 }
+.article--picture {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+  max-width: 100%;
+  object-fit: cover;
+  border-radius: 2rem 2rem 0 0;
+}
+.article--title {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+  padding: 1rem;
+}
+.article--text {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+  padding: 1rem;
+  text-align: justify;
+}
+
