--- a/public/css/style_nav.css
+++ b/public/css/style_nav.css
@@ -1,320 +1,159 @@
-@media screen and (max-width: 970px) {
-  .logoDominika{
-    max-height: 3rem;
-  }
-  
-  .logo-and-name{
-    display: flex;
-    flex-direction: row;
-  }
-
-  .wrapper .btn {
-    display: block;
-    color: var(--color-light);
-  }
-
-.name a {
-    color: var(--color-light);
-    font-size: larger;
-    font-weight: 600;
-    text-decoration: none;
-  }
-  
-  .wrapper .nav-links {
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    max-width: 350px;
-    top: 0;
-    left: -100%;
-    background: #242526;
-    display: block;
-    padding: 50px 10px;
-    line-height: 50px;
-    overflow-y: auto;
-    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
-    transition: all 0.3s ease;
-  }
-  /* custom scroll bar */
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-  ::-webkit-scrollbar-track {
-    background: var(--color-bg);
-  }
-  ::-webkit-scrollbar-thumb {
-    background: var(--color-bg);
-  }
-  #menu-btn:checked ~ .nav-links {
-    left: 0%;
-  }
-  #menu-btn:checked ~ .btn.menu-btn {
-    display: none;
-  }
-  #close-btn:checked ~ .btn.menu-btn {
-    display: block;
-  }
-  .nav-links li {
-    margin: 15px 10px;
-  }
-  .nav-links li a {
-    padding: 0 20px;
-    display: block;
-    font-size: 20px;
-  }
-  .nav-links .drop-menu {
-    position: static;
-    opacity: 1;
-    top: 65px;
-    visibility: visible;
-    padding-left: 20px;
-    width: 100%;
-    max-height: 0px;
-    overflow: hidden;
-    box-shadow: none;
-    transition: all 0.3s ease;
-  }
-  #showDrop:checked ~ .drop-menu,
-  #showMega:checked ~ .mega-box {
-    max-height: 100%;
-  }
-  .nav-links .desktop-item {
-    display: none;
-  }
-  .nav-links .mobile-item {
-    display: block;
-    color: var(--color-light);
-    font-size: 20px;
-    font-weight: 500;
-    padding-left: 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-  }
-  .nav-links .mobile-item:hover {
-    background: var(--color-bg);
-  }
-  .drop-menu li {
-    margin: 0;
-  }
-  .drop-menu li a {
-    border-radius: 5px;
-    font-size: 18px;
-  }
-  .mega-box {
-    position: static;
-    top: 65px;
-    opacity: 1;
-    visibility: visible;
-    padding: 0 20px;
-    max-height: 0px;
-    overflow: hidden;
-    transition: all 0.3s ease;
-  }
-  .mega-box .content {
-    box-shadow: none;
-    flex-direction: column;
-    padding: 20px 20px 0 20px;
-  }
-  .mega-box .content .row {
-    width: 100%;
-    margin-bottom: 15px;
-    border-top: 1px solid rgba(255, 255, 255, 0.08);
-  }
-  .mega-box .content .row:nth-child(1),
-  .mega-box .content .row:nth-child(2) {
-    border-top: 0px;
-  }
-  .content .row .mega-links {
-    border-left: 0px;
-    padding-left: 15px;
-  }
-  .row .mega-links li {
-    margin: 0;
-  }
-  .content .row header {
-    font-size: 19px;
-  }
-  .wrapper .logo a {
-    color: var(--color-light);
-    font-size: medium;
-    font-weight: 600;
-    text-decoration: none;
-  }
-}
-
-* {
+.body{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-
-}
-nav {
-  /*position: fixed;*/
-  z-index: 90;
-  max-width: 75rem;
-  background: var(--color-dark-txt);
-  margin: auto;
-  border-radius: 5rem;
-  font-family: "Aesthetic Romance", sans-serif;
-  font-size: x-large;
-  
-}
-nav .wrapper {
-  position: relative;
-  padding: 0px 30px;
-  line-height: 70px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
-.name a {
-  color: var(--color-light);
-  font-weight: 600;
-  text-decoration: none;
-}
-.wrapper .nav-links {
-  display: inline-flex;
-}
-.nav-links li {
-  list-style: none;
-  z-index: 90;
-}
-.nav-links li a {
-  color: var(--color-light);
-  text-decoration: none;
-  font-size: x-large;
-  font-weight: 500;
-  padding: 9px 15px;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
-
-.nav-links li a:hover {
-  background: var(--color-dark-elem);
-  color: var(--color-light);
-}
-.nav-links .mobile-item {
-  display: none;
-}
-.nav-links .drop-menu {
-  position: absolute;
-  background: var(--color-bg);
-  width: 250px;
-  line-height: 45px;
-  top: 85px;
-  opacity: 0;
-  visibility: hidden;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-}
-.nav-links li:hover .drop-menu,
-.nav-links li:hover .mega-box {
-  transition: all 0.3s ease;
-  top: 70px;
-  opacity: 1;
-  visibility: visible;
-}
-.drop-menu li a {
-  width: 100%;
-  display: block;
-  padding: 0 0 0 15px;
-  font-weight: medium;
-  border-radius: 0px;
-  color: var(--color-dark-txt);
-  background-color: var(--color-light);
-}
-.mega-box {
-  position: absolute;
+.overlay-nav-mobile {
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;
-  padding: 0 30px;
-  top: 85px;
-  opacity: 0;
-  visibility: hidden;
-}
-.mega-box .content {
-  background: #242526;
-  padding: 25px 20px;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
-}
-.mega-box .content .row {
-  width: calc(25% - 30px);
-  line-height: 45px;
-}
-.content .row img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.content .row header {
-  color: var(--color-light);
-  font-weight: 500;
-}
-.content .row .mega-links {
-  margin-left: -40px;
-  border-left: 1px solid rgba(255, 255, 255, 0.09);
-}
-.row .mega-links li {
-  padding: 0 20px;
-}
-.row .mega-links li a {
-  padding: 0px;
-  padding: 0 20px;
-  color: var(--color-light);
-  display: block;
-}
-.row .mega-links li a:hover {
-  color: var(--color-light);
-}
-.wrapper .btn {
-  color: var(--color-light);
-  background-color: var(--color-bg);
-  font-size: 20px;
-  cursor: pointer;
-  /*display: none;*/
-}
-.wrapper .btn.close-btn {
-  position: absolute;
-  right: 30px;
-  top: 10px;
-} 
-nav input {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.6);
   display: none;
 }
-
-.body-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  text-align: center;
-  padding: 0 30px;
-}
-.body-text div {
-  font-size: 45px;
-  font-weight: 600;
+.overlay-nav-mobile.open {
+  display: block;
+  z-index: 2;
 }
 
-.logoDominika{
-  height: 5rem;
-}
-
-.logo-and-name{
+.nav {
+  background-color: var(--color-dark-txt);
+  margin: auto;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0rem 2rem;
+  font-family: "Aesthetic Romance", sans-serif;
+  border-radius: 2rem;
+}
+.nav--logoandname{
+justify-self: left;
+display: flex;
+flex-direction: row;
 }
 
-@media screen and (min-width: 970px) {
-
-.name a {
-  font-size: xx-large ;
-}
+.nav--logo img{
+  color: var(--color-light);
+  max-width: 5rem;
 }
 
+.nav--name {
+  color: var(--color-light);
+  font-size: larger;
+  font-weight: 600;
+  font-size: x-large;
+  margin: auto;
+}
 
+.nav--menu__link-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav--menu__link {
+  margin-right: 1rem;
+}
+
+.nav--menu__link:last-of-type {
+  margin-right: initial;
+}
+
+.nav--menu__link a {
+  color: var(--color-light);
+  font-size: xx-large;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 1rem;
+  position: relative;
+}
+
+.nav--menu__link a:hover {
+  background-color: var(--color-light);
+  color: var(--color-dark-txt);
+  padding: 1rem;
+  border-radius: 2rem;
+}
+
+.nav--menu {
+  display: none;
+}
+
+.nav--burger svg {
+  width: 2rem;
+}
+
+.nav--menu__close {
+  width: 2rem;
+}
+.nav--menu {
+position: fixed;
+top: 0;
+left: 0;
+width: 250px;
+height: 100vh;
+display: flex;
+background-color: var(--color-dark-elem);
+color: var(--color-bg);
+align-items: center;
+justify-content: center;
+transform: translateX(100%);
+display: none;
+transition: 0.3s transform ease-in-out;
+}
+
+.nav--menu.open {
+  transform: initial;
+  display: flex;
+  z-index: 3;
+}
+.nav--menu__link-list {
+  flex-direction: column;
+  align-items: flex-start;
+}
+.nav--menu__link {
+  margin-right: 0;
+  margin-bottom: 2rem;
+}
+
+
+
+.nav--menu__close{
+  display: block;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.test {
+  display: none;
+}
+
+.test.open {
+  display: flex;
+}
+
+
+
+
+
+
+@media screen and (min-width: 640px) {
+.nav--menu {
+  display: flex;
+}
+.nav--burger{
+  display: none;
+}
+.nav--menu__close{
+  display: none;
+}
+
+
+.nav--menu__link a{
+  font-size: 25px;
+}
+}
