--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -21,6 +21,7 @@ border-radius: 5rem;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
   max-width: 100vw;
+
 }
 .mindmapimg{
   max-width: 100%;
@@ -80,7 +81,7 @@ article {
   animation: appear linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1rem 1.5rem 1rem;
   text-align: justify;
 }
 
