--- a/public/css/style_article.css
+++ b/public/css/style_article.css
@@ -53,7 +53,7 @@ border-radius: 5rem;
     animation: appear linear;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
-    text-align: justify;
+    text-align: left;
     padding: 1rem 2rem;
   }
 }
@@ -76,6 +76,7 @@ article {
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
   padding: 0.5rem;
+  text-align: center;
 }
 .article--text {
   animation: appear linear;
