formulaire et route d'ajout d'un nouvel article OK et fonctionnel

--- a/frontend/public/css/style_nav.css
+++ b/frontend/public/css/style_nav.css
@@ -100,6 +100,10 @@ ul {
   width: 2rem;
 }
 
+.addLink {
+  background-color: red;
+}
+
 @media screen and (max-width: 1024px) {
   .overlay-nav-mobile {
   position: fixed;
