modif de des couleurs des boutons ajouter un article et supprimer un article

--- a/frontend/public/css/style_nav.css
+++ b/frontend/public/css/style_nav.css
@@ -101,7 +101,7 @@ ul {
 }
 
 .addLink {
-  background-color: red;
+  background-color: rgb(41, 83, 41);
 }
 
 @media screen and (max-width: 1024px) {
