--- a/frontend/public/css/style_article.css
+++ b/frontend/public/css/style_article.css
@@ -6,8 +6,15 @@
   to {
     opacity: 1;
     scale: 1;
-  } 
+  }
 }
+
+  /*FORMULAIRE DE MODIFICATION D'ARTICLE*/
+  .deleteLink {
+    background-color: rgb(235, 88, 88);
+    padding: 0.5rem;
+    border-radius: 1rem;
+  }
 .article--update label{
   padding: 2rem;
 }
