--- a/frontend/public/css/style_article.css
+++ b/frontend/public/css/style_article.css
@@ -55,13 +55,12 @@ position: relative;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
   max-width: 100vw;
-
 }
 .mindmapimg{
   max-width: 100%;
 }
 .article {
-  margin: 1rem;
+  margin: 1rem 1rem 2rem 1rem;
   border-radius: 2rem;
   background-color: var(--color-light);
 
@@ -88,7 +87,6 @@ position: relative;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
     text-align: justify;
-    padding: 1rem;
   }
 }
 article {
@@ -195,6 +193,7 @@ a {
       font-weight: bold;
       text-shadow: none;
       display: inline;
+      margin-bottom: 1rem;
   
     }
     &.photo {
@@ -209,8 +208,11 @@ a {
   }
   .readmore{
     position: absolute;
-    top: 11rem;
+    top: 11.5rem;
     left: 4rem;
-
+  }
+  .mindmap--container {
+    max-width: 50%;
+    margin: auto;
   }
 }
